2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/salt.c: Add parameters to
	crypt_make_salt to force the crypt method and number of rounds.
	* libmisc/salt.c: Add parameter to SHA_salt_rounds to force the
	number of rounds.
	* libmisc/salt.c, lib/getdef.c: ENCRYPT_METHOD and MD5_CRYPT_ENAB
	are needed also when USE_PAM (e.g. for chpasswd).
	* src/passwd.c, src/newusers.c, src/gpasswd.c: Use the new
	crypt_make_salt prototype
	* src/chpasswd.c, src/chgpasswd.c: Add option -c, --crypt-method
	and -s, --sha-rounds to specify the crypt method and number of
	rounds in case of one of the SHA methods. The new prototype of
	crypt_make_salt simplifies the handling of -m, --md5.

2007-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: The salt has a random size (between 8 and 16
	bytes).
	* lib/getdef.c, etc/login.defs: Add definitions for
	SHA_CRYPT_MIN_ROUNDS and SHA_CRYPT_MAX_ROUNDS.
	* libmisc/salt.c: Use SHA_CRYPT_MIN_ROUNDS and SHA_CRYPT_MAX_ROUNDS
	to add a random number of rounds if needed.

2007-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c (MAGNUM): Terminate the array with nul (the array
	is then used with strcat).
	* libmisc/salt.c (crypt_make_salt): Initialize result[0] to nul at
	the beginning (was not initialized when USE_PAM).
	* libmisc/salt.c (crypt_make_salt): Check that ENCRYPT_METHOD is a
	valid crypt method.

2007-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, libmisc/obscure.c, libmisc/salt.c, src/passwd.c,
	lib/getdef.c, etc/login.defs: Add support for SHA256 and SHA512
	encrypt methods. Apply RedHat's patch shadow-4.0.18.1-sha256.patch.
	Thanks to Peter Vrabec. Hardly no changes except re-indent and
	changes related to recent modifications (max_salt_len in
	crypt_make_salt). Changes in lib/defines.h not applied (definition
	of ENCRYPTMETHOD_SELECT). I will add a configure check or flag.
